--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.3",
+    "@angular/animations": "^18.1.0-next.2",
     "@angular/cdk": "^18.0.3",
-    "@angular/common": "^18.0.3",
-    "@angular/compiler": "^18.0.3",
-    "@angular/core": "^18.0.3",
-    "@angular/forms": "^18.0.3",
+    "@angular/common": "^18.1.0-next.2",
+    "@angular/compiler": "^18.1.0-next.2",
+    "@angular/core": "^18.1.0-next.2",
+    "@angular/forms": "^18.1.0-next.2",
     "@angular/material": "^18.0.3",
-    "@angular/platform-browser": "^18.0.3",
-    "@angular/platform-browser-dynamic": "^18.0.3",
-    "@angular/platform-server": "^18.0.3",
-    "@angular/router": "^18.0.3",
-    "@angular/ssr": "^17.2.3",
+    "@angular/platform-browser": "^18.1.0-next.2",
+    "@angular/platform-browser-dynamic": "^18.1.0-next.2",
+    "@angular/platform-server": "^18.1.0-next.2",
+    "@angular/router": "^18.1.0-next.2",
+    "@angular/ssr": "^18.1.0-next.2",
     "@ngrx/signals": "^17.1.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -30,9 +30,9 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/cli": "^17.2.3",
-    "@angular/compiler-cli": "^18.0.3",
+    "@angular-devkit/build-angular": "^18.1.0-next.2",
+    "@angular/cli": "^18.1.0-next.2",
+    "@angular/compiler-cli": "^18.1.0-next.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
